--- a/PJA_Skills_032/Pages/HomePage.xaml
+++ b/PJA_Skills_032/Pages/HomePage.xaml
@@ -3,6 +3,9 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:PJA_Skills_032"
+    xmlns:i="using:Microsoft.Xaml.Interactivity"
+    xmlns:icore="using:Microsoft.Xaml.Interactions.Core"
+    xmlns:imedia="using:Microsoft.Xaml.Interactions.Media"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:data="using:PJA_Skills_032.Model"
@@ -14,6 +17,13 @@
         directly on the GridView's item source to for further optimization. Please see the AppUIBasics sample for an example of how to do this.  -->
         <CollectionViewSource x:Name="ContactsCVS"  IsSourceGrouped="True" />
 
+        <!--ANIMATION-->
+        <Storyboard x:Name="RotationStoryboard" RepeatBehavior="Forever">
+            <DoubleAnimation Storyboard.TargetName="RefreshBtnIcon"                                Storyboard.TargetProperty="(UIElement.RenderTransform).(RotateTransform.Angle)" To="360">
+
+            </DoubleAnimation>
+        </Storyboard>
+        
         <!--#region DataTemplate-->
         <!-- When using x:Bind, you need to set x:DataType -->
         <DataTemplate x:Name="ContactGridViewTemplate" x:DataType="data:Contact">
@@ -123,11 +133,36 @@
     </Page.Resources>
 
     <Page.BottomAppBar >
+        <!--TODO: STYLE OVERRIDE-->
         <CommandBar Foreground="White">
             <CommandBar.Background>
                 <SolidColorBrush Color="{StaticResource app_bar_red}"/>
             </CommandBar.Background>
             <AppBarButton x:Name="AppBarButtonEdit" Label="Find" Icon="Find" Foreground="White" />
+            <AppBarButton x:Name="RefreshBtn" Label="Refresh"
+                          Foreground="White">
+                <AppBarButton.Icon>
+                    <SymbolIcon x:Name="RefreshBtnIcon" Symbol="Sync" 
+                                RenderTransformOrigin="0.5,0.5">
+                        
+                        <SymbolIcon.RenderTransform>
+                            <RotateTransform />
+                        </SymbolIcon.RenderTransform>
+                        
+                        
+                        
+                    </SymbolIcon>
+                </AppBarButton.Icon>
+
+                <i:Interaction.Behaviors>
+                    <icore:EventTriggerBehavior EventName="Click">
+                        <imedia:ControlStoryboardAction Storyboard="{StaticResource RotationStoryboard}"        ControlStoryboardOption="TogglePlayPause">
+                            
+                        </imedia:ControlStoryboardAction>
+                    </icore:EventTriggerBehavior>
+                </i:Interaction.Behaviors>
+
+            </AppBarButton>
         </CommandBar>
     </Page.BottomAppBar>
 
