--- a/PJA_Skills_032/Shell.xaml
+++ b/PJA_Skills_032/Shell.xaml
@@ -16,7 +16,7 @@
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <StackPanel Orientation="Horizontal" Background="{ThemeResource SystemChromeMediumColor}">
+        <StackPanel Orientation="Horizontal" Background="#FFF44336" >
             <Button Content="&#xE700;" Command="{x:Bind ViewModel.ToggleSplitViewPaneCommand}" Style="{StaticResource IconButtonStyle}"/>
             <TextBlock Text="PJA Skills" Style="{StaticResource AppTitleTextBlockStyle}" />
         </StackPanel>
