--- a/PJA_Skills_032/Pages/MyProfilePage.xaml
+++ b/PJA_Skills_032/Pages/MyProfilePage.xaml
@@ -6,7 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d" >
+    mc:Ignorable="d" Loaded="OnLoaded" >
     <Page.BottomAppBar >
         <CommandBar Foreground="White">
             <CommandBar.Background>
@@ -34,7 +34,7 @@
             </Grid.ColumnDefinitions>
             <TextBlock x:Name="UserName" Text="Andrii Kovalchuk" Style="{StaticResource TitleTextBlockStyle}" Margin="15,0,0,31.333" Height="30" VerticalAlignment="Bottom" FontWeight="Bold" />
             <Image x:Name="image" Grid.Column="1" Margin="10" Source="ms-appx:///Assets/LockScreenLogo.png"/>
-            <TextBlock x:Name="Faculty" Text="Informatyka" Style="{StaticResource TitleTextBlockStyle}" Margin="15,40,0,0" Height="30" VerticalAlignment="Top" FontSize="12" FontStyle="Italic"  >
+            <TextBlock x:Name="UserFaculty" Text="Informatyka" Style="{StaticResource TitleTextBlockStyle}" Margin="15,40,0,0" Height="30" VerticalAlignment="Top" FontSize="12" FontStyle="Italic"  >
                 <TextBlock.Foreground>
                     <SolidColorBrush Color="{StaticResource app_bar_red}"/>
                 </TextBlock.Foreground>
