--- a/PJA_Skills_032/Pages/HomePage.xaml
+++ b/PJA_Skills_032/Pages/HomePage.xaml
@@ -28,42 +28,7 @@
 
         <!--  #region DataTemplate  -->
         <!--  When using x:Bind, you need to set x:DataType  -->
-        <DataTemplate x:Name="ContactGridViewTemplate" x:DataType="data:Contact">
-
-            <!--<StackPanel Orientation="Vertical">
-                <Ellipse x:Name="Ellipse"
-                             Width ="140"
-                             Height="140"
-                             VerticalAlignment="Center"
-                             HorizontalAlignment="Center"
-                             Margin="4,4,4,4">
-                    <Ellipse.Fill>
-                        <ImageBrush Stretch="Fill" ImageSource="ms-appx:///Assets/LockScreenLogo.png"/>
-                    </Ellipse.Fill>
-                </Ellipse>
-            -->
-            <!--  Phase 2: TextBlock with contact name  -->
-            <!--
-                <TextBlock x:Name="ContactName"
-                               Margin="4,4,0,4"
-                               Text="{x:Bind Name}"
-                               x:Phase="2"
-                               Style="{ThemeResource BodyTextBlockStyle}"
-                               HorizontalAlignment="Center"/>
-            -->
-            <!--  Phase 3: TextBlock with contact job title  -->
-            <!--
-                <TextBlock x:Name="Position"
-                               Text="{x:Bind Position}"
-                               Margin="4,4,0,4"
-                               x:Phase="3"
-                               Style="{ThemeResource BodyTextBlockStyle}"
-                               FontSize="12"
-                               Foreground="Gray"
-                               HorizontalAlignment="Center"/>
-            </StackPanel>-->
-
-
+        <DataTemplate x:Name="ContactGridViewTemplate" x:DataType="data:TestUser">
             <RelativePanel Margin="0,10, 0, 20">
                 <Image x:Name="userImage"
                        Width="100"
@@ -81,7 +46,7 @@
                            RelativePanel.AlignLeftWith="userName"
                            RelativePanel.Below="userName"
                            Style="{ThemeResource BodyTextBlockStyle}"
-                           Text="{x:Bind Position}" />
+                           Text="{x:Bind Faculty}" />
 
                 <TextBlock x:Name="iconToLearn"
                            Margin="10,20,5,0"
@@ -196,7 +161,7 @@
         <StackPanel Orientation="Vertical">
             <TextBlock Style="{StaticResource TitleTextBlockStyle}" Text="Home Page" />
 
-            <GridView ItemTemplate="{StaticResource ContactGridViewTemplate}" ItemsSource="{x:Bind ContactsCVS.View}">
+            <GridView ItemTemplate="{StaticResource ContactGridViewTemplate}" ItemsSource="{x:Bind ViewModel.Users}">
                 <!--<GridView.Items>
                     <data:Contact FirstName="sdfsdf">
 
@@ -205,7 +170,7 @@
 
                     </data:Contact>
                 </GridView.Items>-->
-                <GridView.GroupStyle>
+                <!--<GridView.GroupStyle>
                     <GroupStyle>
                         <GroupStyle.HeaderTemplate>
                             <DataTemplate x:DataType="data:GroupInfoList">
@@ -213,7 +178,7 @@
                             </DataTemplate>
                         </GroupStyle.HeaderTemplate>
                     </GroupStyle>
-                </GridView.GroupStyle>
+                </GridView.GroupStyle>-->
             </GridView>
 
         </StackPanel>
